@@ -1,9 +1,7 @@
 //! This module provides primitives used by the various builder.
 
-use rorm_db::conditional as sql;
-
 use crate::conditions::Condition;
-use crate::internal::query_context::{QueryContext, QueryContextBuilder};
+use crate::internal::query_context::QueryContextBuilder;
 use crate::sealed;
 
 /// Marker for the generic parameter storing an optional [`Condition`]
@@ -14,18 +12,13 @@ pub trait ConditionMarker<'a>: 'a {
     fn add_to_builder(&self, builder: &mut QueryContextBuilder);
 
     /// Convert the condition into rorm-sql's format using a query context's registered joins.
-    fn into_option<'c>(self, context: &'c QueryContext) -> Option<sql::Condition<'c>>
-    where
-        'a: 'c;
+    fn into_option(self) -> Option<Box<dyn Condition<'a>>>;
 }
 
 impl<'a> ConditionMarker<'a> for () {
     fn add_to_builder(&self, _builder: &mut QueryContextBuilder) {}
 
-    fn into_option<'c>(self, _context: &'c QueryContext) -> Option<sql::Condition<'c>>
-    where
-        'a: 'c,
-    {
+    fn into_option(self) -> Option<Box<dyn Condition<'a>>> {
         None
     }
 }
@@ -35,11 +28,7 @@ impl<'a, T: Condition<'a>> ConditionMarker<'a> for T {
         Condition::add_to_builder(self, builder);
     }
 
-    fn into_option<'c>(self, context: &'c QueryContext) -> Option<sql::Condition<'c>>
-    where
-        'a: 'c,
-        Self: 'c,
-    {
-        Some(self.as_sql(context))
+    fn into_option(self) -> Option<Box<dyn Condition<'a>>> {
+        Some(self.boxed())
     }
 }
